# chararray

./: README.md  mypy.ini  setup.cfg
src/chararray/: __init__.py
tests/: chararray_test.py
